k8s/garage-operator/namespace-garage-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "garage-operator"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
